fixed redundant escaping of backticks

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -34,7 +34,7 @@ basic:
     🪙 Используй этот QR код или адрес ниже, чтобы задонатить нам в {{coin.fullname}}.
       
     ⚠️ Обрати внимание, что сеть {{coin.network}} и ты используешь правильный адрес:
-    \`{{coin.address}}\`
+    `{{coin.address}}`
           
     ⚠️ Кошельки пока работают в тестовом режиме, прежде чем слать большую сумму, попробуй что-нибудь совсем маленькое или напиши бухгалтеру
           
