--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -211,9 +211,9 @@ service:
       Все, что не подходит топику по тематике, лучше пиши в general, не плоди топики без необходимости и будь зайкой.
       Организационные вопросы и вопросы, касающиеся самого спейса, лучше писать в основном чате @hacker_embassy
     horny: |
-      🍆 Ohh, myyy. Welcum to the club {{newMembers}}, buddy
+      🍆 Ohh, myyy. Welcum to the club {{newMembers}}, buddy!
     key: |
-      🌭 Добро пожаловать в резиденты, {{newMembers}}. Теперь ты тоже священный хранитель ключа
+      🌭 Добро пожаловать в резиденты, {{newMembers}}. Теперь ты тоже священный хранитель ключа!
 
       Загляни еще раз в мои команды /help, теперь тебе доступно много нового. Обрати внимание на /control, открывающий тебе безграничную (ну или не очень) власть над самим спейсом. Используй её с умом.
       
@@ -278,7 +278,7 @@ status:
   in:
     notready: 🔐 Сейчас спейс не готов принять гостей
     gotin: |
-      🤝 {{username}} пришел в спейс
+      🤝 {{username}} уже в спейсе
 
       📲 Попробуй команду /autoinside чтобы отмечаться в спейсе автоматически
   out:
@@ -289,7 +289,7 @@ status:
     gotin: 🟢 {{memberusername}} привёл {{username}} в спейс
   outforce:
     shouldnot: 🔐 Ээ нее, ты не можешь его отправить домой
-    gotout: 🔴 {{memberusername}} отправил домой {{username}}
+    gotout: 🔴 {{memberusername}} отправил(а) домой {{username}}
   going: 🚕 {{username}} планирует сегодня зайти в спейс
   notgoing: 🛌 {{username}} больше не планирует сегодня в спейс
   emoji:
@@ -299,7 +299,7 @@ status:
       #`/setemoji 🍗#` - Установить свой эмодзи 
       #`/setemoji status#` - Посмотреть свой установленный в боте эмодзи
       #`/setemoji remove#` - Удалить свой эмодзи из бота  
-    fail: ⚠️ Укажите валидный эмодзи адрес
+    fail: ⚠️ Укажите валидный эмодзи
     set: 🐥 Эмодзи {{emoji}} успешно установлен для юзера {{username}}.
     removed: 🗑 Эмодзи удален для юзера {{username}}.
     isset: 🐥 Для юзера {{username}} задан эмодзи {{emoji}}
