--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -220,10 +220,10 @@ service:
       🎉🎉🎉 Резиденты, поднимите свои сосиски за {{newMembers}}
 status:
   buttons:
-    in: 🤝 Я пришёл
-    out: 👋 Я ушёл
-    andin: 🤝 И я пришёл
-    andout: 👋 А я ушёл
+    in: 🤝 Я в спейсе
+    out: 👋 Я не в спейсе
+    andin: 🤝 И я в спейсе
+    andout: 👋 А я уже не в спейсе
     going: 🚕 Планирую зайти
     notgoing: 🛌 Уже не планирую
     andgoing: 🚕 И я планирую
@@ -242,7 +242,7 @@ status:
       #`/setmac mac_address#` - Установить свой MAC адрес (или несколько, через запятую)
       #`/setmac status#` - Посмотреть свой установленный в боте MAC адрес
       #`/setmac remove#` - Удалить свои MAC адреса из бота  
-    fail: ⚠️ Укажите валидный MAC адрес (или несколько, через запятую)
+    fail: ⚠️ Укажите валидный MAC адрес (или несколько, через запятую).
     set: 📡 MAC адреса {{cmd}} успешно установлены для юзера {{username}}.
     removed: |
       🗑 MAC адреса удалены для юзера {{username}}. Автовход теперь работать не будет.
@@ -260,7 +260,7 @@ status:
       #`/autoinside enable#` - Включить автовход и автовыход  
       #`/autoinside disable#` - Выключить автовход и автовыход  
 
-    fail: ⚠️ Не удалось включить автовход, хотя MAC задан. Кто-нибудь, накостыляйте моему разработчику
+    fail: ⚠️ Не удалось включить автовход, хотя MAC задан. Кто-нибудь, накостыляйте моему разработчику.
     nomac: |
       ⚠️ Твой MAC адрес не задан. Добавь его командой /setmac
     set: 🕺 Автовход и автовыход активированы для юзера {{username}} на MAC адрес {{usermac}}
@@ -268,30 +268,30 @@ status:
     isset: 🕺 Автовход и автовыход включены для юзера {{username}} на MAC адрес {{usermac}}
     isnotset: 🚷 Автовход и автовыход выключены для юзера {{username}}
   status:
-    undefined: 🔐 Статус спейса неопределен
-    noconnection: 📵 Не удалось связаться со спейсом. Данные о посетителях могут быть неактуальными \n\n{{statusMessage}}
+    undefined: 🔐 Статус спейса неопределен.
+    noconnection: 📵 Не удалось связаться со спейсом. Данные о посетителях могут быть неактуальными.\n\n{{statusMessage}}
   open: |
-    🔑 {{username}} #*открыл#* спейс для гостей. Отличный повод зайти
+    🔑 Спейс #*открыт#* для гостей {{username}}. Отличный повод зайти!
   close: |
-    🔒 {{username}} #*закрыл#* спейс. Все отметившиеся отправлены домой
-  evict: 🔒 Список отметившихся очищен
+    🔒 Спейс #*закрыт#* {{username}}. Все отметившиеся отправлены домой.
+  evict: 🔒 Список отметившихся очищен.
   in:
-    notready: 🔐 Сейчас спейс не готов принять гостей
+    notready: 🔐 Сейчас спейс не готов принять гостей.
     gotin: |
-      🤝 {{username}} уже в спейсе
+      🤝 {{username}} теперь в спейсе.
 
-      📲 Попробуй команду /autoinside чтобы отмечаться в спейсе автоматически
+      📲 Попробуй команду /autoinside чтобы отмечаться в спейсе автоматически.
   out:
     shouldnot: 🔐 Странно, ты же не должен был быть внутри...
-    gotout: 👋 {{username}} ушел из спейса
+    gotout: 👋 {{username}} теперь не в спейсе.
   inforce:
-    notready: 🔐 Сорян, ты не можешь сейчас его привести
-    gotin: 🟢 {{memberusername}} привёл {{username}} в спейс
+    notready: 🔐 Сорян, ты не можешь сейчас привести этого человека.
+    gotin: 🟢 {{memberusername}} привел(а) {{username}} в спейс.
   outforce:
-    shouldnot: 🔐 Ээ нее, ты не можешь его отправить домой
-    gotout: 🔴 {{memberusername}} отправил(а) домой {{username}}
-  going: 🚕 {{username}} планирует сегодня зайти в спейс
-  notgoing: 🛌 {{username}} больше не планирует сегодня в спейс
+    shouldnot: 🔐 Ээ нее, ты не можешь его отправить домой.
+    gotout: 🔴 {{memberusername}} отправил(а) домой {{username}}.
+  going: 🚕 {{username}} планирует сегодня зайти в спейс.
+  notgoing: 🛌 {{username}} больше не планирует сегодня в спейс.
   emoji:
     help: |
       🐥 С помощью этой команды можно задать эмодзи 
@@ -299,9 +299,9 @@ status:
       #`/setemoji 🍗#` - Установить свой эмодзи 
       #`/setemoji status#` - Посмотреть свой установленный в боте эмодзи
       #`/setemoji remove#` - Удалить свой эмодзи из бота  
-    fail: ⚠️ Укажите валидный эмодзи
+    fail: ⚠️ Укажите валидный эмодзи.
     set: 🐥 Эмодзи {{emoji}} успешно установлен для юзера {{username}}.
     removed: 🗑 Эмодзи удален для юзера {{username}}.
-    isset: 🐥 Для юзера {{username}} задан эмодзи {{emoji}}
-    isnotset: 🐥 Эмодзи не задан для юзера {{username}}
+    isset: 🐥 Для юзера {{username}} задан эмодзи {{emoji}}.
+    isnotset: 🐥 Эмодзи не задан для юзера {{username}}.
 
