--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -222,8 +222,10 @@ status:
   buttons:
     in: 🤝 Я в спейсе
     out: 👋 Я не в спейсе
-    andin: 🤝 И я в спейсе
-    andout: 👋 А я уже не в спейсе
+    inandin: 🤝 Я тоже в спейсе
+    inandout: 👋 А я не в спейсе
+    outandin: 🤝 А я в спейсе
+    outandout: 👋 Я тоже не в спейсе
     going: 🚕 Планирую зайти
     notgoing: 🛌 Уже не планирую
     andgoing: 🚕 И я планирую
