--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -26,10 +26,32 @@ basic:
     report: |
       📩 У вас новая проблема!
       "{{issue}}"
+  residents: | 
+    👥 Вот они, наши великолепные резиденты:
+    {{userList}}
+    🧠 Вы можете обратиться к ним по любому спейсовскому вопросу
   location: 
     address: |
       🗺 Наш адрес: Армения, Ереван, Пушкина 38/18 (вход со двора)
     caption: 🏫 Вот этот домик, единственный в своем роде
+  donate: |
+    💸 Хакспейс не является коммерческим проектом и существует исключительно на пожертвования участников.
+    Мы вносим свой вклад в развитие спейса: оплата аренды и коммуналки, забота о пространстве, помощь в приобретении оборудования.
+    Мы будем рады любой поддержке. 
+    
+    Задонатить нам можно следующими способами:
+    💳 Банковская карта Visa/Mastercard Армении.
+      {{donateCardCommand}}
+    💰 Криптовалюта 
+      {{cryptoCommands}}
+    💵 Наличкой при встрече (самый лучший вариант).
+      {{donateCashCommand}}
+
+    📊 Увидеть наши текущие сборы и ваш вклад можно по команде 
+      {{fundsCommand}}
+
+    💌 По вопросам доната обращайтесь к нашим бухгалтерам, они помогут:
+    {{accountantsList}}
   donateCoin: |
     🪙 Используй этот QR код или адрес ниже, чтобы задонатить нам в {{coin.fullname}}.
       
@@ -48,6 +70,37 @@ basic:
     Вот они:
     {{accountantsList}}
     🛍 Если хочешь задонатить натурой или другим способом - жми /donate
+  join: |
+    🧑🏻‍🏫 Если вы находитесь в Ереване, увлечены технологиями и ищете единомышленников, заходите к нам.
+    - Мы проводим регулярный день открытых дверей каждую пятницу в 20.00.
+    - Часто по понедельникам в 20.00 мы проводим музыкальные встречи: приносим гитары, играем в Rocksmith и джемим.
+    - В любой другой день спейс тоже может принять гостей, вводи команду {{statusCommand}} чтобы узнать открыт ли спейс и есть ли там кто-нибудь.
+
+    💸 Посещения свободные (бесплатные), но любые донаты на помощь нашим проектам и аренду очень приветствуются.
+    Подробнее можно узнать по команде {{donateCommand}}
+
+    🗺 Чтобы узнать, как нас найти, жми {{locationCommand}}
+
+    🔑 Если вы хотите стать постоянным участником - полноценным резидентом сообщества, т.е. иметь свой ключ, своё место для хранения вещей (инструменты, сервера и.т.п.), участвовать в принятии решений о развитии спейса,\
+    то наши требования просты:
+    - Дружелюбность и неконфликтность.
+    - Готовность участвовать в жизни сообщества.
+    - Регулярные пожертвования (естественно в рамках ваших возможностей).
+
+    🧙🏻‍♂️ Обратитесь к любому резиденту спейса, он представит вашу кандидатуру Совету Спейса.
+  events: |
+    🗓 За нашими мероприятиями можно следить в календарике
+    {{calendarLink}}
+    Подпишись плюсиком ➕ внизу страницы или возьми {{iCalLink}}
+
+    🎭 Что у нас происходит: 
+    - Мастерклассы и презентации на различные темы от 3D печати, моделирования и пайки до нейросетей, алгоритмов доказательства теорем и шибари. Дату анонсируем заранее в чатике.
+    - Часто по вторникам в 21.00 мы проводим музыкальные встречи: приносим гитары, играем в Rocksmith и джемим.
+    - Каждую пятницу в 20.00 у нас традиционный день открытых дверей, общаемся, знакомимся и тусим.
+    - В любой другой день спейс тоже может принять гостей, смотри status спейса, чтобы узнать больше.
+
+    💸 Посещения свободные (бесплатные), но любые донаты на помощь нашим проектам и аренду очень приветствуются.
+    Подробнее можно узнать по команде {{donateCommand}}
   start:
     text: |
       🇬🇧 Привет хакерчанин. Я бот для менеджмента всяких процессов в спейсе. 
@@ -99,10 +152,33 @@ admin:
     success: 🗑 Пользователь {{username}} удален
     fail: ⚠️ Не удалось удалить пользователя (может его и не было?)
 birthday: 
-  help: | 
+  nextbirthdays: |
+    🎂 В этом месяце празднуют свои днюхи:
+  noone: Никто? Странно...
+  help: |
+    {{usersList}}
+    Хочешь, чтобы тебя тоже поздравили? Добавляй свою днюху командой в форматах:
+    #`/mybirthday YYYY-MM-DD#`
+    #`/mybirthday MM-DD#`
+    Надоели поздравления себя? Вводи команду:
+    #`/mybirthday remove#`
+  fail: | 
     🛂 Укажите дату в формате #`YYYY-MM-DD#`, #`MM-DD#` или укажите #`remove#`
   set: 🎂 День рождения {{username}} установлен как {{date}}
   remove: 🎂 День рождения {{username}} сброшен
+  months:
+    january: января
+    february: февраля
+    march: марта
+    april: апреля
+    may: мая
+    june: июня
+    july: июля
+    august: августа
+    september: сентября
+    october: октября
+    november: ноября
+    december: декабря
 embassy:
   common: 
     fail: ⚠️ Сервис недоступен
@@ -119,9 +195,36 @@ embassy:
     nonewmessages: Новых сообщений нет
     fail: ⚠️ Не удалось получить статус, может, что-то с инетом, электричеством или le-fail?
   printers:
+    help: |
+      🖨 У нас есть два 3D принтера:
+
+      🚺 Anette от ubershy и cake64
+      Документация по нему доступна тут:
+      https://wiki.hackerembassy.site/ru/equipment/anette
+      Веб интерфейс доступен внутри сети спейса по адресу {{anetteApi}}
+      Статус принтера можно узнать по команде /anette
+
+      🚹 Plumbus от the_mihalich
+      Документация по нему доступна тут:
+      https://wiki.hackerembassy.site/ru/equipment/plumbus
+      Веб интерфейс доступен внутри сети спейса по адресу {{plumbusApi}}
+      Статус принтера можно узнать по команде /plumbus
     anettestatus: Статус Anette
     plumbusstatus: Статус Plumbus
+    undefinedtime: Хз
   printerstatus:
+    statusheader: "💤 Статус принтера: {{state}}"
+    status: |
+      ⏲ Печатается файл ${print_stats.filename}
+
+      🕔 Процент завершения {{progress}}%
+      🕔 Прошло {{minutesPast}} минут
+      🕔 Осталось примерно {{estimate}} минут
+
+      📏 Использовано {{usedFilament}} мм филамента ({{usedFilementInMeters}} м)
+
+      🔥 Температура экструдера ${extruder.temperature} C, целевая ${extruder.target} C
+      🔥 Температура стола ${heater_bed.temperature} C, целевая ${heater_bed.target} C
     update: Обновить статус {{printername}}
     fail: ⚠️ Принтер пока недоступен
   doorbell:
@@ -147,6 +250,11 @@ funds:
     buttons:
       csv: 🧾 Экспорт в CSV
       donut: 📊 Посмотреть диаграмму
+    collected: Собрано
+    postponed: отложен
+    closed: закрыт
+    open: открыт
+    from: из
   fundsall: |
     💾 Вот архив всех наших сборов
     
@@ -187,6 +295,13 @@ funds:
     fail: ⚠️ Что-то не так
 needs:
   buy:
+    nothing: 👌 Пока никто ничего не просил
+    pleasebuy: |
+      🙏 Кто-нибудь, купите по дороге в спейс:
+    byrequest: по просьбе
+    helpbuy: |
+      ℹ️ Можно попросить купить что-нибудь по дороге в спейс с помощью команды #`/buy item_name#`
+    helpbought: "✅ Отметить покупку сделанной можно нажав на кнопку ниже:"
     success: |
       🙏 {{username}} попросил кого-нибудь купить #`{{item}}#` по дороге в спейс.
     fail: Не удалось добавить просьбу о покупке
@@ -269,7 +384,25 @@ status:
     isnotset: 🚷 Автовход и автовыход выключены для юзера {{username}}
   status:
     undefined: 🔐 Статус спейса неопределен
-    noconnection: 📵 Не удалось связаться со спейсом. Данные о посетителях могут быть неактуальными \n\n{{statusMessage}}
+    noconnection: |
+      📵 Не удалось связаться со спейсом. Данные о посетителях могут быть неактуальными
+    
+      {{statusMessage}}
+    messageopened: Отличный повод зайти, так что звоните в звонок или пишите находящимся внутри - вам откроют
+    messageclosed: Ждем, пока кто-то из резидентов его откроет. Может внутри никого нет, или происходит закрытое собрание резидентов, или они опять забыли сделать /open? Who knows... Лучше спроси у них в чате.
+    updated: Обновлено
+    opened: "#*открыт#*"
+    closed: "#*закрыт#*"
+    state: |
+      {{stateEmoji}} Спейс {{state}} для гостей {{changedBy}}
+
+      {{stateMessage}}
+
+    insidechecked: |
+      👨‍💻 Внутри отметились:
+    nooneinside: 🛌 Внутри никто не отметился
+    going: |
+      🚕 Планируют сегодня зайти:
   open: |
     🔑 {{username}} #*открыл#* спейс для гостей. Отличный повод зайти
   close: |
