increase a length of the line to make a text on buttons fully displayed

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -418,7 +418,7 @@ status:
       📲 Попробуй команду /autoinside чтобы отмечаться в спейсе автоматически.
   out:
     shouldnot: 🔐 Странно, ты же не должен был быть внутри...
-    gotout: 👋 {{username}} теперь не в спейсе.
+    gotout: 👋 {{username}} теперь не в спейсе. Надеемся, что еще вернется...
   inforce:
     notready: 🔐 Сорян, ты не можешь сейчас привести этого человека.
     gotin: 🟢 {{memberusername}} привел(а) {{username}} в спейс.
