--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -337,10 +337,10 @@ status:
   buttons:
     in: 🤝 Я в спейсе
     out: 👋 Я не в спейсе
-    inandin: 🤝 Я тоже в спейсе
-    inandout: 👋 А я не в спейсе
+    inandin: 🤝 И я в спейсе
+    inandout: 👋 А я уже нет
     outandin: 🤝 А я в спейсе
-    outandout: 👋 Я тоже не в спейсе
+    outandout: 👋 Я тоже не там
     going: 🚕 Планирую зайти
     notgoing: 🛌 Уже не планирую
     andgoing: 🚕 И я планирую
