--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -215,16 +215,16 @@ embassy:
   printerstatus:
     statusheader: "💤 Статус принтера: {{state}}"
     status: |
-      ⏲ Печатается файл ${print_stats.filename}
+      ⏲ Печатается файл {{print_stats.filename}}
 
       🕔 Процент завершения {{progress}}%
-      🕔 Прошло {{minutesPast}} минут
-      🕔 Осталось примерно {{estimate}} минут
+      🕔 Прошло {{past}}
+      🕔 Осталось примерно {{estimate}}
 
-      📏 Использовано {{usedFilament}} мм филамента ({{usedFilementInMeters}} м)
+      📏 Использовано {{usedFilament}} метров филамента
 
-      🔥 Температура экструдера ${extruder.temperature} C, целевая ${extruder.target} C
-      🔥 Температура стола ${heater_bed.temperature} C, целевая ${heater_bed.target} C
+      🔥 Температура экструдера {{extruder.temperature}} C, целевая {{extruder.target}} C
+      🔥 Температура стола {{heater_bed.temperature}} C, целевая {{heater_bed.target}} C
     update: Обновить статус {{printername}}
     fail: ⚠️ Принтер пока недоступен
   doorbell:
