better welcome translation

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -326,7 +326,10 @@ service:
       Все, что не подходит топику по тематике, лучше пиши в general, не плоди топики без необходимости и будь зайкой.
       Организационные вопросы и вопросы, касающиеся самого спейса, лучше писать в основном чате @hacker_embassy
     horny: |
-      🍆 Ohh, myyy. Welcum to the club {{newMembers}}, buddy!
+      🍆 Ohh, myyy. We have {{newMembers}} cuming into our hot and cozy place.
+      Welcum to the club, buddy/gal! 
+
+      🍑 Members, please /slap our new guest as juicy as you can.
     key: |
       🌭 Добро пожаловать в резиденты, {{newMembers}}. Теперь ты тоже священный хранитель ключа!
 
