--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -442,4 +442,9 @@ status:
     removed: 🗑 Эмодзи удален для юзера {{username}}.
     isset: 🐥 Для юзера {{username}} задан эмодзи {{emoji}}.
     isnotset: 🐥 Эмодзи не задан для юзера {{username}}.
+  statsof: "🕔 {{username}} за время существования бота провел в спейсе (на основе отметок)"
+  stats: 
+    text: "🕔 За время существования бота эти юзеры провели в спейсе (на основе отметок)" 
+    tryautoinside: "📲 Хочешь знать точную статистику о себе? Не забывай отмечаться с помощью /in и /out, а лучше используй /autoinside, чтобы делать это автоматически"
+    
 
