* stats with time periods * extracted utility methods * fixed long message splitting * updated help

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -1,7 +1,7 @@
 basic:
   help: | 
-    [Я нахожусь в разработке, ты можешь поучаствовать в моем развитии в репозитории на гитхабе спейса].\n
-    Держи мой список команд:\n
+    [Я нахожусь в разработке, ты можешь поучаствовать в моем развитии в репозитории на гитхабе спейса].
+    Держи мой список команд:
     {{availableCommands}}{{globalModifiers}}
   about: |
     🏫 Hacker Embassy (Ереванский Хакерспейс) - это пространство, где собираются единомышленники, увлеченные технологиями и творчеством. Мы вместе работаем над проектами, делимся идеями и знаниями, просто общаемся.
@@ -444,7 +444,9 @@ status:
     isnotset: 🐥 Эмодзи не задан для юзера {{username}}.
   statsof: "🕔 {{username}} за время существования бота провел в спейсе (на основе отметок)"
   stats: 
-    text: "🕔 За время существования бота эти юзеры провели в спейсе (на основе отметок)" 
+    start: "🕔 За время существования бота эти юзеры провели в спейсе (на основе отметок)" 
+    invaliddates: "🕔 Не могу понять даты, попробуй в формате YYYY-MM-DD" 
+    month: "🕔 За c {{from.day}}/{{from.month}}/{{from.year}} по {{to.day}}/{{to.month}}/{{to.year}} эти юзеры провели в спейсе (на основе отметок)" 
     tryautoinside: "📲 Хочешь знать точную статистику о себе? Не забывай отмечаться с помощью /in и /out, а лучше используй /autoinside, чтобы делать это автоматически"
     
 
