stats with donuts

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -446,6 +446,7 @@ status:
   stats: 
     start: "🕔 За время существования бота эти юзеры провели в спейсе (на основе отметок)" 
     invaliddates: "🕔 Не могу понять даты, попробуй в формате YYYY-MM-DD" 
+    hoursinspace: "Часов проведено в спейсе c {{from.day}}/{{from.month}}/{{from.year}} по {{to.day}}/{{to.month}}/{{to.year}}"
     month: "🕔 За c {{from.day}}/{{from.month}}/{{from.year}} по {{to.day}}/{{to.month}}/{{to.year}} эти юзеры провели в спейсе (на основе отметок)" 
     tryautoinside: "📲 Хочешь знать точную статистику о себе? Не забывай отмечаться с помощью /in и /out, а лучше используй /autoinside, чтобы делать это автоматически"
     
