going with an additional message

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -428,7 +428,7 @@ status:
   outforce:
     shouldnot: 🔐 Ээ нее, ты не можешь его отправить домой.
     gotout: 🔴 {{memberusername}} отправил(а) домой {{username}}.
-  going: 🚕 {{username}} планирует сегодня зайти в спейс.
+  going: 🚕 {{username}} планирует сегодня зайти в спейс {{note}}
   notgoing: 🛌 {{username}} больше не планирует сегодня в спейс.
   emoji:
     help: |
