--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -414,13 +414,13 @@ status:
     🔒 Спейс #*закрыт#* {{username}}. Все отметившиеся отправлены домой.
   evict: 🔒 Список отметившихся очищен.
   in:
-    notready: 🔐 Сейчас спейс не готов принять гостей.
+    notready: 🔐 Сейчас спейс не готов принять гостей... или резиденты опять забыли сделать /open
     gotin: |
       🤝 {{username}} теперь в спейсе.
 
       📲 Попробуй команду /autoinside чтобы отмечаться в спейсе автоматически.
   out:
-    shouldnot: 🔐 Странно, ты же не должен был быть внутри...
+    shouldnot: 🔐 А тебя и так нет в списке отмеченных (когда спейс закрывают, он очищается)
     gotout: 👋 {{username}} теперь не в спейсе. Надеемся, что еще вернется...
   inforce:
     notready: 🔐 Сорян, ты не можешь сейчас привести этого человека.
@@ -444,10 +444,11 @@ status:
     isnotset: 🐥 Эмодзи не задан для юзера {{username}}.
   statsof: "🕔 {{username}} за время существования бота провел в спейсе (на основе отметок)"
   stats: 
-    start: "🕔 За время существования бота эти юзеры провели в спейсе (на основе отметок)" 
+    start: "🕔 За время существования бота (c января 2023) эти юзеры провели в спейсе (на основе отметок)" 
     invaliddates: "🕔 Не могу понять даты, попробуй в формате YYYY-MM-DD" 
     hoursinspace: "Часов проведено в спейсе c {{from.day}}/{{from.month}}/{{from.year}} по {{to.day}}/{{to.month}}/{{to.year}}"
     month: "🕔 C {{from.day}}/{{from.month}}/{{from.year}} по {{to.day}}/{{to.month}}/{{to.year}} эти юзеры провели в спейсе (на основе отметок)" 
     tryautoinside: "📲 Хочешь знать точную статистику о себе? Не забывай отмечаться с помощью /in и /out, а лучше используй /autoinside, чтобы делать это автоматически"
+    help: "ℹ️ Также можно получить статистику за текущий месяц /month, предыдущий месяц /lastmonth, и за любой период #`/stats from 2023-05-01 to 2023-05-25#`"
     
 
