--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -447,7 +447,7 @@ status:
     start: "🕔 За время существования бота (c января 2023) эти юзеры провели в спейсе (на основе отметок)" 
     invaliddates: "🕔 Не могу понять даты, попробуй в формате YYYY-MM-DD" 
     hoursinspace: "Часов проведено в спейсе c {{from.day}}/{{from.month}}/{{from.year}} по {{to.day}}/{{to.month}}/{{to.year}}"
-    month: "🕔 C {{from.day}}/{{from.month}}/{{from.year}} по {{to.day}}/{{to.month}}/{{to.year}} эти юзеры провели в спейсе (на основе отметок)" 
+    period: "🕔 C {{from.day}}/{{from.month}}/{{from.year}} по {{to.day}}/{{to.month}}/{{to.year}} эти юзеры провели в спейсе (на основе отметок)" 
     tryautoinside: "📲 Хочешь знать точную статистику о себе? Не забывай отмечаться с помощью /in и /out, а лучше используй /autoinside, чтобы делать это автоматически"
     help: "ℹ️ Также можно получить статистику за текущий месяц /month, предыдущий месяц /lastmonth, и за любой период #`/stats from 2023-05-01 to 2023-05-25#`"
     
