increased donation message

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -281,6 +281,7 @@ funds:
     fail: ⚠️ Не удалось передать донат
   adddonation:
     success: 💸 {{username}} задонатил {{value}} {{currency}} в сбор {{fundName}}
+    increased: 💸 {{username}} увеличил свой донат в сбор {{fundName}} еще на {{value}} {{currency}}
     fail: ⚠️ Не удалось добавить донат (может с валютой или суммой что-то не так?)
   removedonation:
     success: 🗑 Удален донат [id:{{donationId}}]
