open calendar as webapp

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -88,19 +88,21 @@ basic:
     - Регулярные пожертвования (естественно в рамках ваших возможностей).
 
     🧙🏻‍♂️ Обратитесь к любому резиденту спейса, он представит вашу кандидатуру Совету Спейса.
-  events: |
-    🗓 За нашими мероприятиями можно следить в календарике
-    {{calendarLink}}
-    Подпишись плюсиком ➕ внизу страницы или возьми {{iCalLink}}
+  events:
+    text: |
+      🗓 За нашими мероприятиями можно следить в календарике
+      {{calendarLink}}
+      Подпишись плюсиком ➕ внизу страницы или возьми {{iCalLink}}
 
-    🎭 Что у нас происходит: 
-    - Мастерклассы и презентации на различные темы от 3D печати, моделирования и пайки до нейросетей, алгоритмов доказательства теорем и шибари. Дату анонсируем заранее в чатике.
-    - Часто по вторникам в 21.00 мы проводим музыкальные встречи: приносим гитары, играем в Rocksmith и джемим.
-    - Каждую пятницу в 20.00 у нас традиционный день открытых дверей, общаемся, знакомимся и тусим.
-    - В любой другой день спейс тоже может принять гостей, смотри status спейса, чтобы узнать больше.
+      🎭 Что у нас происходит: 
+      - Мастерклассы и презентации на различные темы от 3D печати, моделирования и пайки до нейросетей, алгоритмов доказательства теорем и шибари. Дату анонсируем заранее в чатике.
+      - Часто по вторникам в 21.00 мы проводим музыкальные встречи: приносим гитары, играем в Rocksmith и джемим.
+      - Каждую пятницу в 20.00 у нас традиционный день открытых дверей, общаемся, знакомимся и тусим.
+      - В любой другой день спейс тоже может принять гостей, смотри status спейса, чтобы узнать больше.
 
-    💸 Посещения свободные (бесплатные), но любые донаты на помощь нашим проектам и аренду очень приветствуются.
-    Подробнее можно узнать по команде {{donateCommand}}
+      💸 Посещения свободные (бесплатные), но любые донаты на помощь нашим проектам и аренду очень приветствуются.
+      Подробнее можно узнать по команде {{donateCommand}}
+    opencalendar: Открыть календарь
   start:
     text: |
       🇬🇧 Привет хакерчанин. Я бот для менеджмента всяких процессов в спейсе. 
