private messages web app update

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -94,6 +94,8 @@ basic:
       {{calendarLink}}
       Подпишись плюсиком ➕ внизу страницы или возьми {{iCalLink}}
 
+      ℹ️ Напиши команду #`/events#` боту в личке и ты сможешь открыть календарь прямо в телеге
+
       🎭 Что у нас происходит: 
       - Мастерклассы и презентации на различные темы от 3D печати, моделирования и пайки до нейросетей, алгоритмов доказательства теорем и шибари. Дату анонсируем заранее в чатике.
       - Часто по вторникам в 21.00 мы проводим музыкальные встречи: приносим гитары, играем в Rocksmith и джемим.
