Common calendar link

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -93,8 +93,7 @@ basic:
       🗓 За нашими мероприятиями можно следить в календарике
       {{calendarLink}}
       Подпишись плюсиком ➕ внизу страницы или возьми {{iCalLink}}
-
-      ℹ️ Напиши команду #`/events#` боту в личке и ты сможешь открыть календарь прямо в телеге
+      Или вообще открой календарь прямо в телеге {{openCalendarInTelegram}}
 
       🎭 Что у нас происходит: 
       - Мастерклассы и презентации на различные темы от 3D печати, моделирования и пайки до нейросетей, алгоритмов доказательства теорем и шибари. Дату анонсируем заранее в чатике.
