Residents donated command

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -294,6 +294,8 @@ funds:
     fail: ⚠️ Не удалось обновить донат (может его и не было?)
   showcosts:
     fail: Текущий сбор на аренду не найден
+  residentsdonated: |
+    💰 Резиденты, донатившие в этом месяце:
   export:
     empty: ⚠️ Нечего экспортировать
     fail: ⚠️ Что-то не так
