--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -197,6 +197,12 @@ embassy:
   monitor: 
     nonewmessages: Новых сообщений нет
     fail: ⚠️ Не удалось получить статус, может, что-то с инетом, электричеством или le-fail?
+  climate: 
+    data: |
+      🌦 Климат в спейсе
+      Первый этаж 🌡️ {{climateInfo.firstFloor.temperature}}ºC 💦 {{climateInfo.firstFloor.humidity}}%
+      Второй этаж 🌡️ {{climateInfo.secondFloor.temperature}}ºC 💦 {{climateInfo.secondFloor.humidity}}%
+    nodata: 🌚 Данные о климате недоступны 
   printers:
     help: |
       🖨 У нас есть два 3D принтера:
