additional room climate

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -202,6 +202,7 @@ embassy:
       🌦 Климат в спейсе:
       Первый этаж 🌡️ {{climateInfo.firstFloor.temperature}}ºC 💦 {{climateInfo.firstFloor.humidity}}%
       Второй этаж 🌡️ {{climateInfo.secondFloor.temperature}}ºC 💦 {{climateInfo.secondFloor.humidity}}%
+    secretdata: Оргийная 🌡️ {{climateInfo.bedroom.temperature}}ºC 💦 {{climateInfo.bedroom.humidity}}%
     nodata: 🌚 Данные о климате недоступны 
   printers:
     help: |
