* Extracted bot role logic * Added restricted command notification * Added ts plugins

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -154,6 +154,8 @@ admin:
   removeUser:
     success: 🗑 Пользователь {{username}} удален
     fail: ⚠️ Не удалось удалить пользователя (может его и не было?)
+  messages:
+    restricted: 📵 Сорян, эта команда тебе недоступна 
 birthday: 
   nextbirthdays: |
     🎂 В этом месяце празднуют свои днюхи:
@@ -222,7 +224,6 @@ embassy:
       Статус принтера можно узнать по команде /plumbus
     anettestatus: Статус Anette
     plumbusstatus: Статус Plumbus
-    undefinedtime: Хз
   printerstatus:
     statusheader: "💤 Статус принтера: {{state}}"
     status: |
@@ -238,6 +239,7 @@ embassy:
       🔥 Температура стола {{heater_bed.temperature}}ºC, целевая {{heater_bed.target}}ºC
     update: Обновить статус {{printername}}
     fail: ⚠️ Принтер пока недоступен
+    undefinedtime: Хз
   doorbell:
     success: 🔔 Звоним в дверной звонок
     fail: 🔕 Не получилось позвонить
