--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -378,7 +378,11 @@ status:
       #`/setmac mac_address#` - Установить свой MAC адрес (или несколько, через запятую)
       #`/setmac status#` - Посмотреть свой установленный в боте MAC адрес
       #`/setmac remove#` - Удалить свои MAC адреса из бота  
-    fail: ⚠️ Укажите валидный MAC адрес (или несколько, через запятую).
+    fail: |
+      ⚠️ Не получилось добавить такой MAC. Может он невалидный?
+      Примеры правильного задания адресов:
+      #`/setmac xx:xx:xx:xx:xx:xx#`
+      #`/setmac xx:xx:xx:xx:xx:xx, xx:xx:xx:xx:xx:xx#`
     set: 📡 MAC адреса {{cmd}} успешно установлены для юзера {{username}}.
     removed: |
       🗑 MAC адреса удалены для юзера {{username}}. Автовход теперь работать не будет.
