Dev Experience: * JS init script * DB dev user initialisation * Readme  update

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -408,7 +408,7 @@ status:
     isset: 🕺 Автовход и автовыход включены для юзера {{username}} на MAC адрес {{usermac}}
     isnotset: 🚷 Автовход и автовыход выключены для юзера {{username}}
   status:
-    undefined: 🔐 Статус спейса неопределен.
+    undefined: 🔐 Статус спейса неопределен. Откройте его кто-нибудь с помощью /open
     noconnection: |
       📵 Не удалось связаться со спейсом. Данные о посетителях могут быть неактуальными.
     
