strict types part 2

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -1,3 +1,5 @@
+general:
+  error: Что-то пошло не так
 basic:
   help: | 
     [Я нахожусь в разработке, ты можешь поучаствовать в моем развитии в репозитории на гитхабе спейса].
@@ -258,6 +260,7 @@ funds:
       
     {{list}}💸 Чтобы узнать, как нам помочь - жми /donate
   fund:
+    nofund: Сбор не найден
     text: |
       {{fundlist}}💸 Чтобы узнать, как нам помочь - жми /donate
     buttons:
