short mode for status

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -358,18 +358,25 @@ service:
 status:
   buttons:
     in: 🤝 Я в спейсе
+    in_short: 🤝
     out: 👋 Я не в спейсе
+    out_short: 👋 
     inandin: 🤝 И я в спейсе
     inandout: 👋 А я уже нет
     outandin: 🤝 А я в спейсе
     outandout: 👋 Я тоже не там
     going: 🚕 Планирую зайти
+    going_short: 🚕 
     notgoing: 🛌 Уже не планирую
+    notgoing_short: 🛌
     andgoing: 🚕 И я планирую
     refresh: 🔃 Обновить
+    refresh_short: 🔃
     repeat: 🔃 Повторить команду
     open: 🚪 Открыть спейс
+    open_short: 🚪
     close: 🔒 Закрыть спейс
+    close_short: 🔒
     reopen: 🚪 Открыть снова
     reclose: 🔒 Закрыть снова
     whoinside: 📹 Кто внутри
@@ -426,11 +433,14 @@ status:
 
       {{stateMessage}}
 
+    state_short: "{{stateEmoji}} Спейс {{state}}"
+    insidechecked_short: "👨‍💻 Внутри [{{count}}]: "
     insidechecked: |
-      👨‍💻 Внутри отметились:
+      👨‍💻 Внутри отметились [{{count}}]:
     nooneinside: 🛌 Внутри никто не отметился
+    going_short: "🚕 Планируют [{{count}}]: "
     going: |
-      🚕 Планируют сегодня зайти:
+      🚕 Планируют сегодня зайти [{{count}}]:
   open: |
     🔑 Спейс #*открыт#* для гостей {{username}}. Отличный повод зайти!
   close: |
