--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -358,25 +358,18 @@ service:
 status:
     buttons:
         in: 🤝 Я в спейсе
-        in_short: 🤝
         out: 👋 Я не в спейсе
-        out_short: 👋
         inandin: 🤝 И я в спейсе
         inandout: 👋 А я уже нет
         outandin: 🤝 А я в спейсе
         outandout: 👋 Я тоже не там
         going: 🚕 Планирую зайти
-        going_short: 🚕
         notgoing: 🛌 Уже не планирую
-        notgoing_short: 🛌
         andgoing: 🚕 И я планирую
         refresh: 🔃 Обновить
-        refresh_short: 🔃
         repeat: 🔃 Повторить команду
         open: 🚪 Открыть спейс
-        open_short: 🚪
         close: 🔒 Закрыть спейс
-        close_short: 🔒
         reopen: 🚪 Открыть снова
         reclose: 🔒 Закрыть снова
         whoinside: 📹 Кто внутри
@@ -433,13 +426,13 @@ status:
 
             {{stateMessage}}
 
-        state_short: "{{stateEmoji}} Спейс {{state}}"
-        insidechecked_short: "👨‍💻 Внутри [{{count}}]: "
+        state_short: "{{stateEmoji}} {{state}} |"
+        insidechecked_short: "👨‍💻 внутри {{count}} |"
         insidechecked: |
             👨‍💻 Внутри отметились [{{count}}]:
         nooneinside: 🛌 Внутри никто не отметился
         nooneinside_short: 🛌 Внутри [0]
-        going_short: "🚕 Планируют [{{count}}]: "
+        going_short: "🚕 планируют {{count}} |"
         going: |
             🚕 Планируют сегодня зайти [{{count}}]:
     open: |
