--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -431,7 +431,7 @@ status:
         insidechecked: |
             👨‍💻 Внутри отметились [{{count}}]:
         nooneinside: 🛌 Внутри никто не отметился
-        nooneinside_pin: 🛌 Внутри [0]
+        nooneinside_pin: 🛌 никого
         going_pin: "🚕 планируют {{count}}"
         going: |
             🚕 Планируют сегодня зайти [{{count}}]:
