sendPhotos and all cams command

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -198,6 +198,7 @@ embassy:
         doorcam: Входная дверь
         fail: |
             ⚠️ {{prefix}}: Камера пока недоступна
+        failall: "⚠️ Все камеры недоступны"
     monitor:
         nonewmessages: Новых сообщений нет
         fail: ⚠️ Не удалось получить статус, может, что-то с инетом, электричеством или le-fail?
