save button for cams

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -375,6 +375,7 @@ status:
         reclose: 🔒 Закрыть снова
         whoinside: 📹 Кто внутри
         whoelse: ❓А кто еще будет?
+        save: 📷 Сохранить
     mac:
         help: |
             📡 С помощью этой команды можно задать MAC адреса для функций автовхода и управления замком 
