* nullable and optional type aliases * fixed out for closed space * changed status updated date translation to simplify tests

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -420,7 +420,7 @@ status:
             {{statusMessage}}
         messageopened: Отличный повод зайти, так что звоните в звонок или пишите находящимся внутри - вам откроют
         messageclosed: Ждем, пока кто-то из резидентов его откроет. Может внутри никого нет, или происходит закрытое собрание резидентов, или они опять забыли сделать /open? Who knows... Лучше спроси у них в чате.
-        updated: Обновлено
+        updated: ⏱ Обновлено {{updatedDate}}
         opened: "#*открыт#*"
         closed: "#*закрыт#*"
         state: |
