updated upcoming events

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -96,6 +96,7 @@ basic:
             {{calendarLink}}
             Подпишись плюсиком ➕ внизу страницы или возьми {{iCalLink}}
             Или вообще открой календарь прямо в телеге {{openCalendarInTelegram}}
+            Ближайшие мероприятия можно узнать по команде /upcoming
 
             🎭 Что у нас происходит: 
             - Мастерклассы и презентации на различные темы от 3D печати, моделирования и пайки до нейросетей, алгоритмов доказательства теорем и шибари. Дату анонсируем заранее в чатике.
@@ -106,6 +107,9 @@ basic:
             💸 Посещения свободные (бесплатные), но любые донаты на помощь нашим проектам и аренду очень приветствуются.
             Подробнее можно узнать по команде {{donateCommand}}
         opencalendar: Открыть календарь
+        upcoming: |
+            🗓 Наши ближайшие мероприятия:
+        error: 📂 Мероприятия не найдены
     start:
         text: |
             🇬🇧 Привет хакерчанин. Я бот для менеджмента всяких процессов в спейсе. 
