profile command, minor repo type fixes

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -405,6 +405,11 @@ status:
         whoinside: 📹 Кто внутри
         whoelse: ❓А кто еще будет?
         save: 📷 Сохранить
+    profile:
+        donated: |
+            💵 Были сделаны следующие донаты:
+            {{donationList}}
+        total: 💰 Всего задоначено в спейс {{total}} {{currency}}
     mac:
         help: |
             📡 С помощью этой команды можно задать MAC адреса для функций автовхода и управления замком 
