--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -505,7 +505,7 @@ status:
         removed: 🗑 Эмодзи удален для юзера {{username}}.
         isset: 🐥 Для юзера {{username}} задан эмодзи {{emoji}}.
         isnotset: 🐥 Эмодзи не задан для юзера {{username}}.
-    statsof: "🕔 {{username}} за время существования бота провел в спейсе (на основе отметок)"
+    statsof: "🕔 {{username}} за время существования бота (с Января 2023) провел в спейсе (на основе отметок)"
     stats:
         start: "🕔 За время существования бота (c января 2023) эти юзеры провели в спейсе (на основе отметок)"
         invaliddates: "🕔 Не могу понять даты, попробуй в формате YYYY-MM-DD"
