--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -109,6 +109,14 @@ basic:
         opencalendar: Открыть календарь
         upcoming: |
             🗓 Наши ближайшие мероприятия:
+        today: |
+            📣 Сегодня в спейсе проходят мероприятия:
+        entrance: |
+            🎁 Вход как всегда свободный, но мы будем рады любым донатам на поддержку пространства. Смотри /donate чтобы узнать больше.
+        notoday: |
+            🏖 Сегодня в спейсе запланированных мероприятий нет. 
+
+            Но, если спейс открыт для гостей, то можно просто приходить позаниматься интересными проектами или потусить. Смотри /status в течение дня.
         error: 📂 Мероприятия не найдены
     start:
         text: |
