--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -96,11 +96,11 @@ basic:
             {{calendarLink}}
             Подпишись плюсиком ➕ внизу страницы или возьми {{iCalLink}}
             Или вообще открой календарь прямо в телеге {{openCalendarInTelegram}}
-            Ближайшие мероприятия можно узнать по команде /upcoming
+            Ближайшие мероприятия можно узнать по команде /upcoming, сегодняшние - по команде /today
 
             🎭 Что у нас происходит: 
             - Мастерклассы и презентации на различные темы от 3D печати, моделирования и пайки до нейросетей, алгоритмов доказательства теорем и шибари. Дату анонсируем заранее в чатике.
-            - Часто по вторникам в 21.00 мы проводим музыкальные встречи: приносим гитары, играем в Rocksmith и джемим.
+            - Часто по понедельникам в 21.00 мы проводим музыкальные встречи: приносим гитары, играем в Rocksmith и джемим.
             - Каждую пятницу в 20.00 у нас традиционный день открытых дверей, общаемся, знакомимся и тусим.
             - В любой другой день спейс тоже может принять гостей, смотри status спейса, чтобы узнать больше.
 
