Basic anti-spam-bot with captcha UserId handling Script for importing tg users into db

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -369,30 +369,32 @@ needs:
         undo: ❌ Отменить покупку
 service:
     welcome:
+        confirm: 🇬🇧 Привет, {{newMember}}. Нажми на кнопку если ты не бот :)
+        captcha: Тык
         main: |
-            🇬🇧 Добро пожаловать в наш уютный уголок, {{newMembers}}
+            🇬🇧 Добро пожаловать в наш уютный уголок, {{newMember}}
 
             Я @{{botName}}, бот-менеджер хакерспейса. Ко мне в личку можно зайти пообщаться, чтобы я вкратце о нас рассказал.
             Не забудь также зайти в наш второй чатик @hackem_foo! Там ты найдешь разные топики по основным проектам спейса, обсуждения будущих мероприятий, новостей, мемов и так далее.
 
-            🎉🎉🎉 Хакерчане, приветствуем {{newMembers}}
+            🎉🎉🎉 Хакерчане, приветствуем {{newMember}}
         offtopic: |
-            🫖 Добро пожаловать в топик чат нашего хакспейса, {{newMembers}}
+            🫖 Добро пожаловать в топик чат нашего хакспейса, {{newMember}}
 
             Тут ты найдешь разные топики по основным проектам спейса, обсуждения будущих мероприятий, новостей, мемов и так далее.
             Все, что не подходит топику по тематике, лучше пиши в general, не плоди топики без необходимости и будь зайкой.
             Организационные вопросы и вопросы, касающиеся самого спейса, лучше писать в основном чате @hacker_embassy
         horny: |
-            🍆 Ohh, myyy. We have {{newMembers}} cuming into our hot and cozy place.
+            🍆 Ohh, myyy. We have {{newMember}} cuming into our hot and cozy place.
             Welcum to the club, buddy/gal! 
 
             🍑 Members, please /slap our new guest as juicy as you can.
         key: |
-            🌭 Добро пожаловать в резиденты, {{newMembers}}. Теперь ты тоже священный хранитель ключа!
+            🌭 Добро пожаловать в резиденты, {{newMember}}. Теперь ты тоже священный хранитель ключа!
 
             Загляни еще раз в мои команды /help, теперь тебе доступно много нового. Обрати внимание на /control, открывающий тебе безграничную (ну или не очень) власть над самим спейсом. Используй её с умом.
 
-            🎉🎉🎉 Резиденты, поднимите свои сосиски за {{newMembers}}
+            🎉🎉🎉 Резиденты, поднимите свои сосиски за {{newMember}}
 status:
     buttons:
         in: 🤝 Я в спейсе
