--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -162,7 +162,11 @@ admin:
         success: ✅ Пользователь {{username}} добавлен как {{roles}}
         fail: ⚠️ Не удалось добавить пользователя (может он уже есть?)
     getUsers:
-        text: 👩‍💻 Текущие пользователи:\n
+        text: |
+            👩‍💻 Текущие пользователи:
+    getRestrictedUsers:
+        text: |
+            👻 Текущие пользователи с ограниченными правами:
     updateRoles:
         success: ✅ Роли {{username}} установлены как {{roles}}
         fail: ⚠️ Не удалось обновить роли
