--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -313,6 +313,11 @@ embassy:
         help: 🗣 С помощью этой команды можно воспроизвести любой звук по ссылке
         success: 🗣 Звук отправлен на динамик
         fail: ⚠️ Не получилось воспроизвести
+    knock:
+        knock: |
+            📢 Тук-тук {{residentsInside}}
+        noresidents: 🛏 A внутри резиденты не отмечались
+
 funds:
     funds: |
         💰 Вот наши текущие сборы:
@@ -484,7 +489,7 @@ status:
 
             {{statusMessage}}
         messageopened: Отличный повод зайти, так что звоните в звонок или пишите находящимся внутри - вам откроют
-        messageclosed: Ждем, пока кто-то из резидентов его откроет. Может внутри никого нет, или происходит закрытое собрание резидентов, или они опять забыли сделать /open? Who knows... Лучше спроси у них в чате.
+        messageclosed: Ждем, пока кто-то из резидентов его откроет. Может внутри никого нет, или происходит закрытое собрание резидентов, или они опять забыли сделать /open? Who knows... Лучше спроси у них в чате или тегни их командой /knock.
         updated: ⏱ Обновлено {{updatedDate}}
         opened: "#*открыт#*"
         closed: "#*закрыт#*"
