zhuchok on memes panel

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -167,6 +167,7 @@ basic:
             adler: 🤤 Adler
             rickroll: 🕺 Rickroll
             rzd: 🚇 Rzd
+            zhuchok: 🤰 Zhuchok
             rfoxed: 🦊 Rfoxed
             nani: 💥 Nani
             cat: 🐱 Cat
