debt command for accounts and tocaball

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -360,6 +360,7 @@ funds:
             ↪️ Донат [id:{{id}}] передан {{accountant}}
             {{username}} донатил в сбор {{fund.name}} в размере {{donation.value}} {{donation.currency}}
         fail: ⚠️ Не удалось передать донат
+        nothing: ⚠️ Ничего не передано, пипец
     adddonation:
         success: 💸 {{username}} задонатил {{value}} {{currency}} в сбор {{fundName}}
         increased: 💸 {{username}} увеличил свой донат в сбор {{fundName}} еще на {{value}} {{currency}}
@@ -377,6 +378,19 @@ funds:
     export:
         empty: ⚠️ Нечего экспортировать
         fail: ⚠️ Что-то не так
+    debt:
+        text: |
+            🧾 На бухгалтере {{username}} числятся следующие донаты:
+
+            {{donationList}}
+            💰 Всего {{total}} {{currency}} деняк
+
+            🛂 Передать донат можно командами:
+            #`/tocab id#` - Отдельный донат Кабу по id
+            #`/tocaball fund_name#` - Все донаты Кабу с определенного сбора
+            #`/tocaball#` - Вообще все донаты Кабу (осторожно)
+            #`/transferdonation donation_id to username#` (td) - Передать донат другому бухгалтеру
+        empty: 📂 На тебе ничего не числится
 needs:
     buy:
         nothing: 👌 Пока никто ничего не просил
