restricting new users

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -410,7 +410,7 @@ needs:
         undo: ❌ Отменить покупку
 service:
     welcome:
-        confirm: 🇬🇧 Привет, {{newMember}}. Нажми на кнопку если ты не бот :)
+        confirm: 🇬🇧 Привет, {{newMember}}. Нажми на кнопку если ты не бот, иначе не сможешь тут писать :)
         captcha: Тык
         main: |
             🇬🇧 Добро пожаловать в наш уютный уголок, {{newMember}}
