--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -305,6 +305,9 @@ embassy:
     doorbell:
         success: 🔔 Звоним в дверной звонок
         fail: 🔕 Не получилось позвонить
+    wake:
+        success: ⏰ Попытались разбудить девайс
+        fail: ⚠️ Не получилось разбудить девайс
     say:
         help: |
             🗣 С помощью этой команды можно сказать что-нибудь на динамике в спейсе, например #`/say Привет, хакеры#`
