--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -308,6 +308,10 @@ embassy:
     wake:
         success: ⏰ Попытались разбудить девайс
         fail: ⚠️ Не получилось разбудить девайс
+    alive:
+        up: 🟢 Девайс доступен
+        down: 🔴 Девайс недоступен
+        fail: ⚠️ Не получилось узнать статус девайса
     say:
         help: |
             🗣 С помощью этой команды можно сказать что-нибудь на динамике в спейсе, например #`/say Привет, хакеры#`
