--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -309,7 +309,7 @@ embassy:
         success: ⏰ Попытались разбудить девайс
         fail: ⚠️ Не получилось разбудить девайс
     alive:
-        up: 🟢 Девайс доступен
+        up: 🟢 Девайс доступен ({{time}} ms)
         down: 🔴 Девайс недоступен
         fail: ⚠️ Не получилось узнать статус девайса
     say:
