--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -305,13 +305,24 @@ embassy:
     doorbell:
         success: 🔔 Звоним в дверной звонок
         fail: 🔕 Не получилось позвонить
-    wake:
-        success: ⏰ Попытались разбудить девайс
-        fail: ⚠️ Не получилось разбудить девайс
-    alive:
-        up: 🟢 Девайс доступен ({{time}} ms)
-        down: 🔴 Девайс недоступен
-        fail: ⚠️ Не получилось узнать статус девайса
+    device:
+        help: |
+            🖥 Девайс {{deviceName}} может управляться по сети следующими командами:
+            #`/{{deviceName}} up#` - Включить
+            #`/{{deviceName}} down#` - Выключить
+            #`/{{deviceName}} status#` - Проверить доступность
+            #`/{{deviceName}} help#` - Вывести это сообщение
+        notfound: ⚠️ Девайс не известен системе
+        wake:
+            success: ⏰ Попытались разбудить девайс, следи за его статусом
+            fail: ⚠️ Не получилось разбудить девайс
+        shutdown:
+            success: ⏰ Команда выключения отправлена
+            fail: ⚠️ Что-то пошло не так, может девайс и так выключен?
+        alive:
+            up: 🟢 Девайс доступен ({{time}} ms)
+            down: 🔴 Девайс недоступен
+            fail: ⚠️ Не получилось узнать статус девайса
     say:
         help: |
             🗣 С помощью этой команды можно сказать что-нибудь на динамике в спейсе, например #`/say Привет, хакеры#`
