--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -428,7 +428,7 @@ needs:
         undo: ❌ Отменить покупку
 service:
     welcome:
-        confirm: 🇬🇧 Привет, {{newMember}}. Нажми на кнопку если ты не бот, иначе не сможешь тут писать :)
+        confirm: 🇬🇧 Привет, {{newMember}}. Нажми на кнопку, если ты не бот, иначе не сможешь тут писать :)
         captcha: Тык
         main: |
             🇬🇧 Добро пожаловать в наш уютный уголок, {{newMember}}
