--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -317,7 +317,7 @@ embassy:
             success: ⏰ Попытались разбудить девайс, следи за его статусом
             fail: ⚠️ Не получилось разбудить девайс
         shutdown:
-            success: ⏰ Команда выключения отправлена
+            success: 📴 Команда выключения отправлена
             fail: ⚠️ Что-то пошло не так, может девайс и так выключен?
         alive:
             up: 🟢 Девайс доступен ({{time}} ms)
