--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -174,6 +174,8 @@ basic:
             dog: 🐶 Dog
             cab: 🥷 Cab
             cock: 🐔 Cock
+            sad: 🎺 Sad
+            badumtss: 🥁 Badumtss
             back: ↩️ Назад
 admin:
     addUser:
